WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69006
[GTK] Fix webkit2 unit tests in debug builds
https://bugs.webkit.org/show_bug.cgi?id=69006
Summary
[GTK] Fix webkit2 unit tests in debug builds
Carlos Garcia Campos
Reported
2011-09-28 10:06:51 PDT
TEST: /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/Programs/unittests/webkit2/testwebview... (pid=17902) ERROR: Thread name "com.apple.WebKit.ProcessLauncher" is longer than 31 characters and will be truncated by Visual Studio ../../Source/JavaScriptCore/wtf/Threading.cpp(76) : WTF::ThreadIdentifier WTF::createThread(void* (*)(void*), void*, const char*)
Attachments
Patch
(2.59 KB, patch)
2011-09-28 10:21 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-09-28 10:21:32 PDT
Created
attachment 109033
[details]
Patch
WebKit Review Bot
Comment 2
2011-09-28 10:55:16 PDT
Comment on
attachment 109033
[details]
Patch Clearing flags on attachment: 109033 Committed
r96237
: <
http://trac.webkit.org/changeset/96237
>
WebKit Review Bot
Comment 3
2011-09-28 10:55:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug